--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-%%writefile requirements.txt
-kaggle==1.6.17
-tensorflow==2.15.0
-pandas==2.1.4
-numpy==1.25.2
-matplotlib==3.7.1
-seaborn==0.13.1
-scikit-learn==1.2.2
+pandas>=2.0
+numpy>=1.24
+seaborn>=0.12
+matplotlib>=3.7
+opencv-python>=4.8
+tensorflow>=2.15
+scikit-learn>=1.3
